// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugins/vue2-jsx > should allow to configure jsx babel plugin options 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/shared/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
                  {
                    "version": "legacy",
                  },
                ],
                "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
                "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "useESModules": true,
                    "version": "7.23.2",
                  },
                ],
                "<ROOT>/packages/babel-preset/dist/pluginLockCorejsVersion",
                [
                  "<ROOT>/packages/webpack/compiled/babel-plugin-lodash",
                  {},
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/babel-plugin-styled-components/lib/index.js",
                  {
                    "displayName": true,
                    "pure": false,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": true,
                    "corejs": {
                      "proposals": true,
                      "version": "3.32",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": "commonjs",
                    "targets": [
                      "chrome >= 87",
                      "edge >= 88",
                      "firefox >= 78",
                      "safari >= 14",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                    "optimizeConstEnums": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@vue/babel-preset-jsx/dist/plugin.cjs.js",
                  {
                    "injectH": false,
                  },
                ],
              ],
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "use": [
          {
            "loader": "<ROOT>/packages/shared/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
                  {
                    "version": "legacy",
                  },
                ],
                "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
                "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "useESModules": true,
                    "version": "7.23.2",
                  },
                ],
                "<ROOT>/packages/babel-preset/dist/pluginLockCorejsVersion",
                [
                  "<ROOT>/packages/webpack/compiled/babel-plugin-lodash",
                  {},
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": true,
                    "corejs": {
                      "proposals": true,
                      "version": "3.32",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": "commonjs",
                    "targets": [
                      "chrome >= 87",
                      "edge >= 88",
                      "firefox >= 78",
                      "safari >= 14",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                    "optimizeConstEnums": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@vue/babel-preset-jsx/dist/plugin.cjs.js",
                  {
                    "injectH": false,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/vue2-jsx > should apply jsx babel plugin correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/shared/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
                  {
                    "version": "legacy",
                  },
                ],
                "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
                "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "useESModules": true,
                    "version": "7.23.2",
                  },
                ],
                "<ROOT>/packages/babel-preset/dist/pluginLockCorejsVersion",
                [
                  "<ROOT>/packages/webpack/compiled/babel-plugin-lodash",
                  {},
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/babel-plugin-styled-components/lib/index.js",
                  {
                    "displayName": true,
                    "pure": false,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": true,
                    "corejs": {
                      "proposals": true,
                      "version": "3.32",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": "commonjs",
                    "targets": [
                      "chrome >= 87",
                      "edge >= 88",
                      "firefox >= 78",
                      "safari >= 14",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                    "optimizeConstEnums": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@vue/babel-preset-jsx/dist/plugin.cjs.js",
                  {
                    "injectH": true,
                  },
                ],
              ],
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "use": [
          {
            "loader": "<ROOT>/packages/shared/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
                  {
                    "version": "legacy",
                  },
                ],
                "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
                "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "useESModules": true,
                    "version": "7.23.2",
                  },
                ],
                "<ROOT>/packages/babel-preset/dist/pluginLockCorejsVersion",
                [
                  "<ROOT>/packages/webpack/compiled/babel-plugin-lodash",
                  {},
                ],
              ],
              "presets": [
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": true,
                    "corejs": {
                      "proposals": true,
                      "version": "3.32",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": "commonjs",
                    "targets": [
                      "chrome >= 87",
                      "edge >= 88",
                      "firefox >= 78",
                      "safari >= 14",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                    "optimizeConstEnums": true,
                  },
                ],
                [
                  "<ROOT>/node_modules/<PNPM_INNER>/@vue/babel-preset-jsx/dist/plugin.cjs.js",
                  {
                    "injectH": true,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;
